--- a/Dockerfiles/Python_based/AMD/Dockerfile
+++ b/Dockerfiles/Python_based/AMD/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM python:latest
 WORKDIR /usr/src/app
-# COPY /src . 
+COPY /src .
 RUN apt-get update --no-install-recommends --yes && \
   apt-get upgrade --no-install-recommends --yes && \
   apt-get install python-scapy --no-install-recommends --yes && \
@@ -18,4 +18,4 @@ RUN apt-get install wget && apt-get install git && \
   GOPATH=/tmp go get -u github.com/heistp/irtt/cmd/irtt && \
   cp /tmp/bin/irtt /usr/local/go/bin
 ENV PATH="$PATH:/usr/local/go/bin"
-# ENTRYPOINT python programm.py
+#ENTRYPOINT python programm.py
