--- a/Module_Tool/Dockerfile
+++ b/Module_Tool/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM python:latest
 WORKDIR /usr/src/app
-COPY /src . 
+COPY /src .
 RUN apt-get update --no-install-recommends --yes && \
   apt-get upgrade --no-install-recommends --yes && \
   apt-get install python-scapy --no-install-recommends --yes && \
@@ -12,10 +12,10 @@ RUN apt-get update --no-install-recommends --yes && \
   pip install scapy && \
   pip install matplotlib
 RUN apt-get install wget && apt-get install git && \
-  wget https://golang.org/dl/go1.15.6.linux-amd64.tar.gz && \
-  tar -C /usr/local -xzf go1.15.6.linux-amd64.tar.gz && \
+  wget https://golang.org/dl/go1.15.6.linux-armv6l.tar.gz && \
+  tar -C /usr/local -xzf go1.15.6.linux-armv6l.tar.gz && \
   export PATH=$PATH:/usr/local/go/bin && \
   GOPATH=/tmp go get -u github.com/heistp/irtt/cmd/irtt && \
   cp /tmp/bin/irtt /usr/local/go/bin
 ENV PATH="$PATH:/usr/local/go/bin"
-ENTRYPOINT python programm.py
+# ENTRYPOINT python programm.py
